--- a/package.json
+++ b/package.json
@@ -11,17 +11,20 @@
   },
   "main": "index.js",
   "repository": "https://github.com/delalify/progen.git",
-  "author": "Delalify",
+  "author": "Delalify (https://github.com/delalify)",
   "license": "MIT",
   "private": true,
+  "scripts": {
+    "start": "ts-node src/index.ts",
+    "dev": "ts-node-dev src/index.ts",
+    "build": "tsc --project ./"
+  },
+  "publishConfig": {
+    "access": "restricted"
+  },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.11.0",
     "@typescript-eslint/parser": "^5.11.0",
     "eslint": "^8.9.0"
-  },
-  "dependencies": {
-    "ts-node": "^10.5.0",
-    "ts-node-dev": "^1.1.8",
-    "typescript": "^4.5.5"
   }
 }
