--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint": "^8.9.0"
   },
   "dependencies": {
+    "@types/node": "^17.0.18",
     "ts-node": "^10.5.0",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.5.5"
